automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -778,6 +778,8 @@
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    x = (selected_trip['pickup_latitude'] - neighbor_trip['pickup_latitude'])**2\n",
     "    y = (selected_trip['pickup_longitude'] - neighbor_trip['pickup_longitude'])**2\n",
+    "    d = math.sqrt()\n",
+    "    \n",
     "    return "
    ]
   },
