automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,16 +778,27 @@
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    x = (selected_trip['pickup_latitude'] - neighbor_trip['pickup_latitude'])**2\n",
     "    y = (selected_trip['pickup_longitude'] - neighbor_trip['pickup_longitude'])**2\n",
-    "    d = math.sqrt()\n",
+    "    d = x + y\n",
     "    \n",
-    "    return "
+    "    return math.sqrt(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.235"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_trip = {'pickup_latitude': 40.64499, 'pickup_longitude': -73.78115, 'trip_distance': 18.38}\n",
     "second_trip = {'pickup_latitude': 40.766931, 'pickup_longitude': -73.982098, 'trip_distance': 1.3}\n",
