--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -821,7 +821,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    pass"
+    "    neighbo"
    ]
   },
   {
