automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -821,7 +821,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    neighbo"
+    "    neighbor_with_distance = neightbor_trip.copy()\n",
+    "    d = math.sqrt()"
    ]
   },
   {
