--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -822,7 +822,7 @@
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
     "    neighbor_with_distance = neightbor_trip.copy()\n",
-    "    d = math.sqrt()"
+    "    neighbor_with_distance['distance_from_selected'] = distance_location()"
    ]
   },
   {
